--- a/Pages/Disaster/Profile/reliefgoodspack/View.cshtml
+++ b/Pages/Disaster/Profile/reliefgoodspack/View.cshtml
@@ -114,7 +114,7 @@
                                 {
                                     <tr>
                                         <td width="5%">@counter</td>
-                                        <th width="25%">@item.itemName</th>
+                                        <td width="25%">@item.itemName</td>
                                         <td width="15%">@item.itemType</td>
                                         <td width="15%">@item.qty</td>
                                         <td width="15%">@item.totalQty</td>
