--- a/Pages/Family/Profile/Index.cshtml
+++ b/Pages/Family/Profile/Index.cshtml
@@ -68,7 +68,7 @@
 		<!-- Sidebar (mobile) -->
 		<div id="sidebarMobile" class="col-md-3 col-lg-2 d-md-none bg-light p-2">
 			<select class="form-select" id="pageSelect">
-				<option value="/family/profile/index?familyID=@Model.familyInfo.familyID">Information Board</option>
+				<option value="/family/profile/index?familyID=@Model.familyInfo.familyID">Information</option>
 				<option value="/family/profile/distribution/index?familyID=@Model.familyInfo.familyID">Relief Distribution Record</option>
 				<option value="/family/profile/vulnerability?familyID=@Model.familyInfo.familyID">Vulnerability Assessment</option>
 				
