--- a/Pages/EvacuationCenter/Profile.cshtml
+++ b/Pages/EvacuationCenter/Profile.cshtml
@@ -86,7 +86,7 @@
 
 <div class="row">
 	<div class="col-md-6 col-lg-7">
-		<h4 class="d-flex justify-content-between align-items-center mb-3">Center Details:</h4>
+		<h4 class="d-flex justify-content-between align-items-center mb-3">Information</h4>
 
 		<ul class="list-group mb-3">
 			<li class="list-group-item d-flex justify-content-between lh-sm">
