--- a/Pages/Family/Profile/Index.cshtml
+++ b/Pages/Family/Profile/Index.cshtml
@@ -108,7 +108,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="dropdown-item" href="/family/edit/index?familyID=@Model.familyInfo.familyID">
+									<a class="dropdown-item" href="/family/edit/family?familyID=@Model.familyInfo.familyID">
 										Edit Family Information
 									</a>
 								</li>
@@ -186,7 +186,7 @@
 														</a>
 													</li>
 													<li>
-														<a class="dropdown-item" href="/family/profile/edit/member?memberID=@item.memberID">
+														<a class="dropdown-item" href="/family/edit/member?memberID=@item.memberID">
 															Edit
 														</a>
 													</li>
