--- a/Pages/disaster/profile/Edit.cshtml
+++ b/Pages/disaster/profile/Edit.cshtml
@@ -29,7 +29,7 @@
 <div class="bg-light rounded px-2 py-0 my-3 text-center">
 	<div class="col-lg-6 mx-auto">
 		<!--NOTE: Labels are longer so column sizes here are larger-->
-		<form method="POST" id="editEvacuationForm">
+		<form method="POST" id="editDisasterForm">
 			<h1 class="display-5 fw-bold">Edit Disaster</h1>
 
 			<br />
